create-app: update ignore files to support Yarn 3
Signed-off-by: Patrik Oldsberg <poldsberg@gmail.com>

--- a/packages/create-app/templates/default-app/.gitignore.hbs
+++ b/packages/create-app/templates/default-app/.gitignore.hbs
@@ -15,6 +15,11 @@ coverage
 # Dependencies
 node_modules/
 
+# Yarn 3 with modules linker
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+
 # Node version directives
 .nvmrc
 
