--- a/packages/create-app/templates/default-app/.gitignore.hbs
+++ b/packages/create-app/templates/default-app/.gitignore.hbs
@@ -15,10 +15,14 @@ coverage
 # Dependencies
 node_modules/
 
-# Yarn 3 with modules linker
+# Yarn 3 files
+.pnp.*
 .yarn/*
-!.yarn/releases
+!.yarn/patches
 !.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # Node version directives
 .nvmrc
